# FundamentosRob-tica

src/my_robot/: package.xml  setup.py
src/my_robot/launch/: display.launch.py
src/my_robot/my_robot/: joint_state_publisher.py
src/my_robot/my_robot/meshes/: Pieza1 -0.17.stl  Pieza17-0.17.stl  Pieza18-0.17.stl  Pieza19-0.17.stl  Pieza2 - 0-17.stl  Pieza2-0.17.stl  Pieza2.stl  Pieza20-0.17.stl  Pieza3 - 0.17.stl  Pieza4-0.17.stl  Pieza5-0.17.stl  Pieza6-0.17.stl  Pieza7-0.17.stl  Pieza9-0.17.stl
src/my_robot/urdf/: robot_dh.urdf
