<?xml version="1.0"?>
<package format="3">
  <name>my_robot</name>
  <version>0.0.1</version>
  <description>DH robot demo</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
